AG-7 fixed spacing and flexbox for exp date and cvc

--- a/code-ff/project2/src/components/Form/Form.css
+++ b/code-ff/project2/src/components/Form/Form.css
@@ -1,9 +1,28 @@
+input {
+    border-radius: 7px;
+    border: 2px solid gray;
+    height: 35px;
+    padding: 0 13px 0 13px;
+}
+
+input#cvc{
+    width: 150px;
+}
+
+input#exp-date-month, #exp-date-year{
+    width: 50px;
+    margin-right: 10px;
+}
+
+
+label {
+    padding-bottom: 5px;
+    font-size: 15px;
+}
+
+
 .form{
-    /* position:fixed;
-    right: 0;
-    margin: 0;
-    height: 100vh;
-    width: 100vw; */
+    width: 400px;
 }
 
 .form-container {
@@ -19,14 +38,10 @@
     padding-bottom: 20px; 
 }
 
-input {
-    border-radius: 7px;
-    border: 2px solid gray;
-    height: 35px;
-    padding: 0 13px 0 13px;
+.date-cvc{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 400px;
 }
 
-label {
-    padding-bottom: 5px;
-    font-size: 15px;
-}
